# DependabotTest

./: pyproject.toml  requirements.txt  requirements_extra.txt  requirements_max.txt
.github/: dependabot.yml
